--- a/app/addons/local/index.html
+++ b/app/addons/local/index.html
@@ -1,19 +1,4 @@
-<c-nav params="name: name, type: type"></c-nav>
-<div class="row">
-    <div class="col-lg-12">
-        <!-- ko if: $data.prev -->
-        <a class="btn btn-default pull-left" data-bind="click: prev">&laquo; Prev</a>
-        <!-- /ko -->
-        <!-- ko if: $data.next -->
-        <a class="btn btn-default pull-right" data-bind="click: next">Next &raquo;</a>
-        <!-- /ko -->
-    </div>
-</div>
-<h2 class="checkbox checkbox-success large">
-    <input id="locally" data-bind="checked: data().install" type="checkbox" value="locally" />
-    <label for="locally">Deploy Locally</label>
-</h2>
-<div data-bind="visible: data().install, with: data().options">
+<c-addon>
     <div class="row">
         <div class="form-group col-lg-6">
             <label for="provider-virtualbox">Select a provider:</label>
@@ -135,4 +120,4 @@
             <a class="btn btn-sm btn-default pull-right" data-bind="click: $parent.addSyncedFolder"><i class="fa fa-plus"></i>  Add synced folder</a>
         </div>
     </div>
-</div>
+</c-addon>
