--- a/app/addons/nodejs/index.html
+++ b/app/addons/nodejs/index.html
@@ -22,6 +22,14 @@
                             <input id="node-12-2" data-bind="checked: version" type="radio" value="0.12.2" />
                             <label for="node-12-2">0.12.2</label>
                         </li>
+                        <li class="radio radio-success">
+                            <input id="node-4-2-6" data-bind="checked: version" type="radio" value="4.2.6" />
+                            <label for="node-4-2-6">4.2.6</label>
+                        </li>
+                        <li class="radio radio-success">
+                            <input id="node-5-5-0" data-bind="checked: version" type="radio" value="5.5.0" />
+                            <label for="node-5-5-0">5.5.0</label>
+                        </li>
                     </ul>
                 </div>
                 <div class="form-group col-lg-12">
